# ndsr

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  components.rs  main.rs  state.rs  systems.rs  views.rs  windows.rs
app/src/components/: nav_bar.rs  nds_rom_info.rs  rom_ref_list.rs  rom_ref_list_entry.rs  window_button.rs  window_renderer.rs
app/src/state/: rom_store.rs  settings.rs
app/src/systems/: file_picker.rs  rom_library.rs
app/src/systems/rom_library/: action.rs  context.rs
app/src/views/: library.rs  main_menu.rs
app/src/windows/: settings.rs
core/: Cargo.toml
core/src/: codec.rs  colors.rs  error.rs  lib.rs
core/src/codec/: data.rs  raw.rs  rom.rs  utils.rs
core/src/codec/data/: filesystem.rs  icon_bitmap.rs  icon_palette.rs  icon_title.rs
core/src/codec/data/filesystem/: fat.rs  fnt.rs
core/src/codec/raw/: bgr555.rs  header.rs  icon_bitmap.rs  icon_palette.rs  icon_title.rs
core/src/codec/rom/: cartridge_size.rs  destination_language.rs  header.rs  header_misc.rs  icon.rs  nds_region.rs  titles.rs  unique_code_category.rs  unit_code.rs
core/src/codec/utils/: serde_bytes.rs
core/src/colors/: rgb555.rs  rgb8.rs
