[package]
name = "ndsr-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui = { version = "0.32.1", features = ["persistence"] }
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
ndsr-core = { workspace = true }
serde = { workspace = true }
